<resources>
  <string name="app_name">ExoAirPlayer</string>
  <string name="show">show</string>
  <string name="hide">hide</string>
  <string name="toast_registration_started">Registering AirPlay service...</string>
  <string name="toast_registration_success">AirPlay registration success</string>
  <string name="toast_registration_failure">AirPlay registration failed</string>
  <string name="toast_start_activity_error_activity_not_found">No Activity Found\n\nNo Intent Filters match the Intent</string>
  <string name="toast_start_activity_error_security">Insufficient Permission\n\nExoAirPlayer cannot start the Activity</string>
  <string name="toast_downloadtracker_error_download_start">Failed to start download</string>
  <string name="toast_downloadtracker_error_download_start_offline_license">Failed to obtain offline license</string>
  <string name="toast_downloadtracker_error_download_live_unsupported">Downloading live content is not supported</string>
  <string name="toast_downloadtracker_error_drm_unsupported_before_api_18">DRM content is not supported on API levels below 18</string>
  <string name="notification_service_ticker">ExoPlayer AirPlay Receiver: service running</string>
  <string name="notification_service_content_line1">ExoAirPlayer running at:</string>
  <string name="notification_service_content_line3">Click to stop service.</string>
  <string name="track_selection_button">Select\nTracks</string>
  <string name="track_selection_title">@string/track_selection_button</string>
  <string name="text_offset_selection_button">Sync\nCaptions</string>
  <string name="text_offset_selection_title">Text Captions Advance or Delay Time Offset</string>
  <string name="audio_offset_selection_button">Sync\nAudio</string>
  <string name="audio_offset_selection_title">Audio Track Advance or Delay Time Offset</string>
  <string name="toggle_download_button_start">Start\nDownload</string>
  <string name="toggle_download_button_stop">Stop\nDownload</string>
  <string translatable="false" name="toast_variable_video_uri">{{video-uri}}</string>
  <string translatable="false" name="toast_variable_video_caption">{{video-caption}}</string>
  <string translatable="false" name="toast_variable_video_req_headers">{{video-req-headers}}</string>
  <string translatable="false" name="toast_variable_video_drm_scheme">{{video-drm-scheme}}</string>
  <string translatable="false" name="toast_variable_video_drm_server">{{video-drm-server}}</string>
  <string translatable="false" name="toast_variable_video_drm_headers">{{video-drm-headers}}</string>
  <string translatable="false" name="toast_variable_date">{{date}}</string>
  <string translatable="false" name="toast_variable_time">{{time}}</string>
  <string translatable="false" name="toast_variable_version">{{version}}</string>
  <string translatable="false" name="toast_variable_preferences">{{preferences}}</string>
  <string translatable="false" name="toast_variable_abi">{{abi}}</string>
  <string translatable="false" name="toast_variable_top_process">{{top-process}}</string>
  <string translatable="false" name="toast_variable_top_activity">{{top-activity}}</string>
  <string translatable="false" name="prefkey_mdsn_server_name">mdsn_server_name</string>
  <string translatable="false" name="prefkey_http_api_password">http_api_password</string>
  <string translatable="false" name="prefkey_default_user_agent">default_user_agent</string>
  <string translatable="false" name="prefkey_max_audio_volume_boost_db">max_audio_volume_boost_db</string>
  <string translatable="false" name="prefkey_max_parallel_downloads">max_parallel_downloads</string>
  <string translatable="false" name="prefkey_seek_back_ms_increment">seek_back_ms_increment</string>
  <string translatable="false" name="prefkey_seek_forward_ms_increment">seek_forward_ms_increment</string>
  <string translatable="false" name="prefkey_audio_volume_percent_increment">audio_volume_percent_increment</string>
  <string translatable="false" name="prefkey_audio_volume_boost_db_increment">audio_volume_boost_db_increment</string>
  <string translatable="false" name="prefkey_ts_extractor_timestamp_search_bytes_factor">ts_extractor_timestamp_search_bytes_factor</string>
  <string translatable="false" name="prefkey_enable_tunneled_video_playback">enable_tunneled_video_playback</string>
  <string translatable="false" name="prefkey_enable_hdmv_dts_audio_streams">enable_hdmv_dts_audio_streams</string>
  <string translatable="false" name="prefkey_pause_on_change_to_audio_output_device">pause_on_change_to_audio_output_device</string>
  <string translatable="false" name="prefkey_prefer_extension_renderer">prefer_extension_renderer</string>
  <string translatable="false" name="prefkey_enable_audio_passthrough">enable_audio_passthrough</string>
  <string translatable="false" name="prefkey_enable_downmix_surround_sound_to_stereo">enable_downmix_surround_sound_to_stereo</string>
  <string translatable="false" name="prefkey_enable_downmix_stereo_sound_to_mono">enable_downmix_stereo_sound_to_mono</string>
  <string translatable="false" name="prefkey_enable_keycode_event_notifications">enable_keycode_event_notifications</string>
  <string translatable="false" name="prefkey_serialized_keycode_map">serialized_keycode_map</string>
  <string translatable="false" name="prefval_mdsn_server_name"></string>
  <string translatable="false" name="prefval_http_api_password"></string>
  <string translatable="false" name="prefval_default_user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36</string>
  <string translatable="false" name="prefval_serialized_keycode_map"></string>
  <string translatable="false" name="pref_settings_key">settings_key</string>
  <string name="pref_settings_title">ExoAirPlayer Settings</string>
  <string name="pref_mdsn_server_name_title">(*) Bonjour Service Name</string>
  <string name="pref_mdsn_server_name_summary">the name advertised by mDNS..</string>
  <string name="pref_http_api_password_title">HTTP API Password</string>
  <string name="pref_http_api_password_summary">secret shared only with authorized clients..</string>
  <string name="pref_default_user_agent_title">User Agent</string>
  <string name="pref_default_user_agent_summary">request header value..</string>
  <string name="pref_max_audio_volume_boost_db_title">Max Audio Volume Boost (dB)</string>
  <string name="pref_max_audio_volume_boost_db_summary">restrain amplification to..</string>
  <string name="pref_max_parallel_downloads_title">(*) Max Parallel Downloads</string>
  <string name="pref_max_parallel_downloads_summary">size of thread pool in download manager..</string>
  <string name="pref_seek_back_ms_increment_title">(*) Backward Seek Increment (ms)</string>
  <string name="pref_seek_back_ms_increment_summary">time increment to seek backwards..</string>
  <string name="pref_seek_forward_ms_increment_title">(*) Forward Seek Increment (ms)</string>
  <string name="pref_seek_forward_ms_increment_summary">time increment to seek forwards..</string>
  <string name="pref_audio_volume_percent_increment_title">Audio Volume Increment (percentage)</string>
  <string name="pref_audio_volume_percent_increment_summary">when less than 100%, volume increment..</string>
  <string name="pref_audio_volume_boost_db_increment_title">Audio Volume Boost Increment (dB)</string>
  <string name="pref_audio_volume_boost_db_increment_summary">when at 100%, amplification increment..</string>
  <string name="pref_ts_extractor_timestamp_search_bytes_factor_title">factor x TsExtractor.DEFAULT_TIMESTAMP_SEARCH_BYTES</string>
  <string name="pref_ts_extractor_timestamp_search_bytes_factor_summary">multiplication factor to apply a relative adjustment..</string>
  <string name="pref_enable_tunneled_video_playback_title">Track Tunneling</string>
  <string name="pref_enable_tunneled_video_playback_summary_on">tunneled playback is enabled</string>
  <string name="pref_enable_tunneled_video_playback_summary_off">tunneled playback is disabled</string>
  <string name="pref_enable_hdmv_dts_audio_streams_title">HDMV DTS audio streams</string>
  <string name="pref_enable_hdmv_dts_audio_streams_summary_on">stream handler is enabled</string>
  <string name="pref_enable_hdmv_dts_audio_streams_summary_off">stream handler is disabled</string>
  <string name="pref_pause_on_change_to_audio_output_device_title">Pause on change to audio output device</string>
  <string name="pref_pause_on_change_to_audio_output_device_summary_on">pause is enabled</string>
  <string name="pref_pause_on_change_to_audio_output_device_summary_off">pause is disabled</string>
  <string name="pref_prefer_extension_renderer_title">(*) Media Decoders</string>
  <string name="pref_prefer_extension_renderer_summary_on">software extension decoders are enabled and preferred over hardware decoders</string>
  <string name="pref_prefer_extension_renderer_summary_off">software extension decoders are disabled, only hardware decoders are enabled</string>
  <string name="pref_enable_audio_passthrough_title">(*) Audio Passthrough</string>
  <string name="pref_enable_audio_passthrough_summary_on">AC3 Dolby Digital passthrough is enabled</string>
  <string name="pref_enable_audio_passthrough_summary_off">AC3 Dolby Digital passthrough is disabled; decoder performs conversion to PCM</string>
  <string name="pref_enable_downmix_surround_sound_to_stereo_title">Downmix surround sound to stereo</string>
  <string name="pref_enable_downmix_surround_sound_to_stereo_summary_on">when there are between 3 and 6 audio channels, reduce to 2</string>
  <string name="pref_enable_downmix_surround_sound_to_stereo_summary_off">play audio tracks with surround sound</string>
  <string name="pref_enable_downmix_stereo_sound_to_mono_title">Downmix stereo sound to mono</string>
  <string name="pref_enable_downmix_stereo_sound_to_mono_summary_on">when there are 2 audio channels, reduce to 1</string>
  <string name="pref_enable_downmix_stereo_sound_to_mono_summary_off">play audio tracks with stereo sound</string>
  <string name="pref_enable_keycode_event_notifications_title">KeyCode event notifications</string>
  <string name="pref_enable_keycode_event_notifications_summary_on">@string/show</string>
  <string name="pref_enable_keycode_event_notifications_summary_off">@string/hide</string>
  <string translatable="false" name="pref_footer_notation_title">-- * --</string>
  <string name="pref_footer_notation_summary">Changes to these settings will take effect after the app is restarted.</string>
</resources>