<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:keepScreenOn="true">

  <androidx.media3.ui.PlayerView
    android:id="@+id/player_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <Button
      android:id="@+id/select_tracks_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/track_selection_button"
      android:visibility="gone"
      android:enabled="false" />

    <Button
      android:id="@+id/select_text_offset_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_offset_selection_button"
      android:visibility="gone"
      android:enabled="false" />

    <Button
      android:id="@+id/toggle_download_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/toggle_download_button_start"
      android:visibility="gone"
      android:enabled="false" />

    <!--
     * based on:
     *   https://github.com/androidx/media/blob/1.5.1/libraries/ui/src/main/res/layout/exo_player_control_view.xml#L75
     * references:
     *   https://github.com/androidx/media/blob/1.5.1/libraries/ui/src/main/res/values/styles.xml#L151
     *   https://github.com/androidx/media/blob/1.5.1/libraries/ui/src/main/res/values/drawables.xml#L61
     *   https://github.com/androidx/media/blob/1.5.1/libraries/ui/src/main/res/values/strings.xml#L24
     *   https://github.com/androidx/media/raw/1.5.1/libraries/ui/src/main/res/drawable-hdpi/exo_ic_settings.png
     *     36x36
     *   https://github.com/androidx/media/raw/1.5.1/libraries/ui/src/main/res/drawable-xxhdpi/exo_ic_settings.png
     *     72x72
    -->
    <ImageButton
      android:id="@+id/open_settings_button"
      style="@style/ExoStyledControls.Button.Bottom.Settings"
      android:padding="0dp"
      android:layout_width="36dp"
      android:minWidth="36dp"
      android:maxWidth="36dp"
      android:layout_height="36dp"
      android:minHeight="36dp"
      android:maxHeight="36dp"
      android:scaleType="fitXY"
      android:layout_gravity="center"
      android:visibility="gone"
      android:enabled="false" />

  </LinearLayout>

</FrameLayout>
